Archive2/09/f23a04e0e4f31f/output
main.cpp:18:24: error: declaration of 'T' shadows template parameter
    template <typename T>
                       ^
main.cpp:15:20: note: template parameter is declared here
template <typename T>
                   ^
main.cpp:19:7: error: member 'pi' declared as a template
    T pi = T{3.14};
      ^
2 errors generated.
